[package]
name = "instruments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
config = "0.14.0"
crossbeam-channel = "0.5.13"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"
